--- a/V3S/licheepi_zero/Board_Drivers/5_ledc_bsp/project/Makefile
+++ b/V3S/licheepi_zero/Board_Drivers/5_ledc_bsp/project/Makefile
@@ -21,7 +21,7 @@ INCLUDE				:= 	$(patsubst %,-I %,$(INCDIRS))
 
 
 
-SFILES				:=	${foreach dir,$(SRCDIRS),$(wildcard $(dir)/*.S))
+SFILES				:=	$(foreach dir,$(SRCDIRS),$(wildcard $(dir)/*.S))
 CFILES				:=	$(foreach dir,$(SRCDIRS),$(wildcard $(dir)/*.c))
 
 print:
