--- a/V3S/licheepi_zero/Board_Drivers/7_key/Makefile
+++ b/V3S/licheepi_zero/Board_Drivers/7_key/Makefile
@@ -27,10 +27,10 @@ VPATH						:= $(SRCDIRS)
 
 
 # project/start.S
-SFILES						:= $(foreach dir,$(SRCDIRS),$(wildcard dir/*.S))
+SFILES						:= $(foreach dir,$(SRCDIRS),$(wildcard $(dir)/*.S))
 
 # project/main.c bsp/v3s_gpio.c
-CFILES						:= $(foreach dir,$(SRCDIRS),$(wildcard dir/*.c))
+CFILES						:= $(foreach dir,$(SRCDIRS),$(wildcard $(dir)/*.c))
 
 
 # start.S
@@ -40,8 +40,32 @@ SFILESNDIR					:= $(notdir $(SFILES))
 CFILESNDIR					:= $(notdir $(CFILES))
 
 
+# SOBJS obj/start.o
+SOBJS						:= $(patsubst %.S,obj/%.o,$(SFILESNDIR))
+
+# COBJS obj/main.o v3s_gpio.o
+COBJS						:= $(patsubst %.c,obj/%.o,$(CFILESNDIR))
+
+# OBJS obj/start.o obj/main.o obj/v3s_gpio.o
+OBJS						:= $(SOBJS) $(COBJS)
+
+
+
 # key.bin : obj/start.o obj/v3s_gpio.o
-# $(TARGET).bin : 
+$(TARGET).bin : $(OBJS)
+	$(LD) -Tv3s.lds $^ -o $(TARGET).elf 
+	$(OBJCOPY) -O binary -S $(TARGET).elf $@
+	$(OBJDUMP) -D -m arm $(TARGET).elf > $(TARGET).dis
+
+# obj/start.o : start.S
+$(SOBJS) : obj/%.o : %.S
+	$(CC) -Wall -nostdlib -c -O2 $(INCLUDS) -o $@ $<
+
+# obj/main.o obj/v3s_gpio.o : main.c v3s_gpio.c
+$(COBJS) : obj/%.o : %.c
+	$(CC) -Wall -nostdlib -c -O2 $(INCLUDS) -o $@ $<
+
+
 
 
 .PHONEY:clean
@@ -54,8 +78,11 @@ print:
 	@echo CFILES = $(CFILES)
 	@echo SFILESNDIR = $(SFILESNDIR)
 	@echo CFILESNDIR = $(CFILESNDIR)
-
+	@echo SOBJS	= $(SOBJS)
+	@echo COBJS	= $(COBJS)
+	@echo OBJS	= $(OBJS)
 
 
 clean:
-	rm -rf $(TARTGET).bin $(TARTGET).elf $(TARTGET).dis
+	rm -rf $(TARGET).bin $(TARGET).elf $(TARGET).dis $(OBJS)
+
